# guilib

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
.claude/: CLAUDE.md
test/: main-test.cpp
